--- a/Locales/en/main.html
+++ b/Locales/en/main.html
@@ -3,6 +3,15 @@
         </ul>
         {{>topbar_menu_tmpl}}
     </script>
+   <script type="text/html" id="ddlLangMenu_tmpl">
+        <li><a href="#!/lang/" class="trigger"><span>More languages</span></a>
+            <ul>
+                <li><a href="#!" title="На языке № раз">На языке № раз</a></li>
+                <li><a href="#!" title="Державною мовою">Державною мовою</a></li>
+                <li><a href="#!" title="На языке № три">На языке № три</a></li>
+            </ul>
+        </li>
+    </script>
    <script type="text/html" id="top_dest_block_tmpl">
         <div id="topdestblock" class="container">
             <h2>Top destinations</h2>
@@ -139,6 +148,7 @@
         <span class="label">1</span>
         <span class="host"><input type="text" name="city" class="dest" value="City" defValue="City" suggest="yes" suggest_value='[{city:"Kiev", cityId:0, country:"Ukraine",countryId:1}]' nosubmit/>
             <span class="diags">Sorry, we have no offers for this city</span>
+            <p class="no straight">Hey! You've just entered some weird information here. Check it carefully please!</p>
         </span>
     </div>
 
