--- a/Locales/en/main.html
+++ b/Locales/en/main.html
@@ -4,7 +4,7 @@
         {{>topbar_menu_tmpl}}
     </script>
    <script type="text/html" id="ddlLangMenu_tmpl">
-        <li><a href="#!/lang/" class="trigger"><span>More languages</span></a>
+        <li><a href="#!" class="trigger"><span>More languages</span></a>
             <ul>
                 <li><a href="#!" title="На языке № раз">На языке № раз</a></li>
                 <li><a href="#!" title="Державною мовою">Державною мовою</a></li>
