--- a/Locales/en/searchResults.html
+++ b/Locales/en/searchResults.html
@@ -41,6 +41,17 @@
 				<div id="randomslist"></div>
         </div>
 </script>
+<script type="text/html" id="src_hotellist_tmpl">
+ <div class="container">
+    <div id="hotellist" class="popular">
+        <div class="wrapper">
+            <div class="opener"></div>
+            <div id="hotellist_holder"></div>
+        </div>
+        <div id="srPager" class="paging"></div>
+    </div>
+  </div>
+</script>
 <script type="text/html" id="ro_item_tmpl">
 <div class="hotel">
     <h3><a href="#!/card/{{hotelId}}" title="{{name}}">{{name}}</a></h3>
