--- a/Locales/ru/searchResults.html
+++ b/Locales/ru/searchResults.html
@@ -33,7 +33,17 @@
 				<a href="#!/search/sortby/name" class="clickablesort"><span class="asc" id="sbt_name"></span>Name</a> <a href="#!/search/sortby/popularity" class="clickablesort"><span class="none" id="sbt_popularity"></span>Popularity</a> <a href="#!/search/sortby/stars"  class="clickablesort"><span class="desc" id="sbt_stars"></span>Stars</a> <a href="#!/search/sortby/price" class="clickablesort"><span class="none" id="sbt_price"></span>Price</a>
 			</div>
  </script>
-</div>
+<script type="text/html" id="src_hotellist_tmpl">
+ <div class="container">
+    <div id="hotellist" class="popular">
+        <div class="wrapper">
+            <div class="opener"></div>
+            <div id="hotellist_holder"></div>
+        </div>
+        <div id="srPager" class="paging"></div>
+    </div>
+  </div>
+</script>
 <script type="text/html" id="ro_block_tmpl">
         <div id="randomsblock" class="container">
 				<h2>Top popular</h2>
