City value validation

--- a/Locales/de/main.html
+++ b/Locales/de/main.html
@@ -145,7 +145,7 @@
         <span class="label">1</span>
         <span class="host"><input type="text" id="city" name="city" class="dest" value="Stadt" defValue="Stadt" suggest="yes" suggest_value='[{city:"Kiev", cityId:0, country:"Ukraine",countryId:1}]' nosubmit/>
             <span class="diags">Leider haben wir keine Angebote für diese Stadt</span>
-            <p class="no straight">Hey! You've just entered some weird information here. Check it carefully please!</p>
+            <span class="diags" id="error_city">Hey! You've just entered some weird information here. Check it carefully please!</span>
         </span>
     </div>
 
@@ -171,6 +171,7 @@
         <span class="label">Reiseziel</span>
         <span class="host"><input type="text" id="city" name="city" class="dest" value="Stadt" defValue="Stadt" suggest="yes" suggest_value='[{city:"Kiev", cityId:0, country: "Ukraine"}]' nosubmit/>
         <span class="diags">Leider haben wir keine Angebote für diese Stadt</span>
+         <span class="diags" id="error_city">Hey! You've just entered some weird information here. Check it carefully please!</span>
 	    </span>
     </div>
 
