--- a/Locales/ru/main.html
+++ b/Locales/ru/main.html
@@ -146,7 +146,8 @@
     <div class="label">
         <span class="label">1</span>
         <span class="host"><input type="text" id="city" name="city" class="dest" value="Город" defValue="Город" suggest="yes" suggest_value='[{city:"Kiev", cityId:0, country:"Ukraine", countryId:1}]' nosubmit/>
-        <p class="no straight">Hey! You've just entered some weird information here. Check it carefully please!</p>
+        <span class="diags" id="error_city">
+            Hey! You've just entered some weird information here. Check it carefully please!</span>
         <span class="diags">Извините, у нас нет предложений для этого города</span>
         </span>
     </div>
@@ -174,6 +175,7 @@
         <span class="label">Город</span>
         <span class="host"><input type="text" id="city" name="city" class="dest" value="Город" defValue="Город" suggest="yes" suggest_value='[{city:"Kiev", cityId:0}]' nosubmit/>
             <span class="diags">Извините, у нас нет предложений для этого города</span>
+        <span class="diags" id="error_city">Hey! You've just entered some weird information here. Check it carefully please!</span>
         </span>
     </div>
 
